introduction of bootloader update for welotec eg500 (#328)
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/machine/eg500.extra.conf
+++ b/conf/machine/eg500.extra.conf
@@ -1,4 +1,5 @@
 PREFERRED_PROVIDER_virtual/kernel = "linux-welotec"
+PREFERRED_PROVIDER_virtual/bootloader = "grub-efi"
 
 # initramfs type
 OMNECT_INITRAMFS_FSTYPE = "cpio.gz"
@@ -17,7 +18,7 @@ OMNECT_ROOT_DEVICE = "/dev/nvme0n1"
 EFI_PROVIDER = " "
 
 # adu compatibility id
-ADU_DEVICEPROPERTIES_COMPATIBILITY_ID = "0"
+ADU_DEVICEPROPERTIES_COMPATIBILITY_ID = "1"
 
 # unset welotec's defaults
 INITRAMFS_IMAGE = ""
