fix OMNECT_ONLINE_INTERFACES handling
Signed-off-by: Harry Waschkeit <harry.waschkeit@googlemail.com>

--- a/conf/machine/eg500.extra.conf
+++ b/conf/machine/eg500.extra.conf
@@ -25,10 +25,7 @@ INITRAMFS_MAXSIZE = ""
 # we use libubootenv but not u-boot for this device
 DEPENDS:remove:pn-libubootenv = "u-boot-default-script"
 
-# ethernet device name
-OMNECT_ETH0 = "enp1s0"
-OMNECT_ETH1 = "enp2s0"
-OMNECT_ETH2 = "enp3s0"
+OMNECT_ONLINE_INTERFACES = "enp1s0:enp2s0:enp3s0"
 
 # remove distro features we don't support
 DISTRO_FEATURES:remove = " \
