--- a/conf/machine/raspberrypi4-64.extra.conf
+++ b/conf/machine/raspberrypi4-64.extra.conf
@@ -9,4 +9,4 @@ WKS_FILE = "omnect-os.rpi4.wks.in"
 # u-boot boot cmd config vars
 UBOOT_ARCH = "arm64"
 
-OMNECT_ONLINE_INTERFACES = "${OMNECT_ETH0}"
+OMNECT_ONLINE_INTERFACES = "eth0:wlan0"
