--- a/conf/machine/rpi4-omnect-lab.conf
+++ b/conf/machine/rpi4-omnect-lab.conf
@@ -21,6 +21,4 @@ UBOOT_ARCH = "arm64"
 
 OMNECT_PART_SIZE_ROOTFS    ?= "900000"
 
-OMNECT_ONLINE_INTERFACES = "${OMNECT_ETH0}"
-
-OMNECT_WWAN0 = "wwan0"
+OMNECT_ONLINE_INTERFACES = "eth0"
