fix: bring back OMNECT_WLAN0 because it's used in recipes
Signed-off-by: Harry Waschkeit <harry.waschkeit@googlemail.com>

--- a/conf/machine/phyboard-polis-imx8mm-4.extra.conf
+++ b/conf/machine/phyboard-polis-imx8mm-4.extra.conf
@@ -32,4 +32,7 @@ KERNEL_DEVICETREE_FN = "imx8mm-phyboard-polis-rdk.dtb"
 # enable wifi + bt
 MACHINE_FIRMWARE:append = "lwb-etsi-firmware"
 
-OMNECT_ONLINE_INTERFACES = "eth0:wlan0"
+# wlan device name
+OMNECT_WLAN0 = "wlan0"
+
+OMNECT_ONLINE_INTERFACES = "eth0:${OMNECT_WLAN0}"
