--- a/conf/machine/raspberrypi3.extra.conf
+++ b/conf/machine/raspberrypi3.extra.conf
@@ -9,4 +9,4 @@ WKS_FILE = "omnect-os.rpi3.wks.in"
 # u-boot boot cmd config vars
 UBOOT_ARCH="arm"
 
-OMNECT_ONLINE_INTERFACES = "eth0:wlan0"
+OMNECT_ONLINE_INTERFACES = "eth0:${OMNECT_WLAN0}"
