--- a/conf/machine/rpi4-omnect-lab.conf
+++ b/conf/machine/rpi4-omnect-lab.conf
@@ -21,4 +21,4 @@ UBOOT_ARCH = "arm64"
 
 OMNECT_PART_SIZE_ROOTFS    ?= "900000"
 
-OMNECT_ONLINE_INTERFACES = "eth0"
+OMNECT_ONLINE_INTERFACES = "eth0:${OMNECT_WLAN0}"
