--- a/conf/machine/eg500.extra.conf
+++ b/conf/machine/eg500.extra.conf
@@ -10,6 +10,9 @@ WKS_FILE = "omnect-os.eg500.wks.in"
 WICVARS:append = " OMNECT_GRUBENV_FILE"
 OMNECT_GRUBENV_FILE = "${LAYERDIR_omnect}/files/grubenv"
 
+# configuration for grub.cfg
+OMNECT_ROOT_DEVICE = "/dev/nvme0n1"
+
 # don't create grub-efi in rootfs
 EFI_PROVIDER = " "
 
