rpi4-omnect-lab.conf: implement different OMNECT_PART_SIZE_ROOTFS values for rel and devel
Signed-off-by: Harry Waschkeit <harry.waschkeit@googlemail.com>

--- a/conf/machine/rpi4-omnect-lab.conf
+++ b/conf/machine/rpi4-omnect-lab.conf
@@ -19,6 +19,7 @@ WKS_FILE = "omnect-os.rpi4.wks.in"
 # u-boot boot cmd config vars
 UBOOT_ARCH = "arm64"
 
-OMNECT_PART_SIZE_ROOTFS    ?= "900000"
+# no differentiation between release an devel images concerning rootfs size
+OMNECT_PART_SIZE_ROOTFS    ?= "${@bb.utils.contains('OMNECT_RELEASE_IMAGE', '900000', '900000', '', d)}"
 
 OMNECT_ONLINE_INTERFACES = "eth0:${OMNECT_WLAN0}"
