fix of the fix of rpi4-omnect-lab.conf - should call it a day right now ...
Signed-off-by: Harry Waschkeit <harry.waschkeit@googlemail.com>

--- a/conf/machine/rpi4-omnect-lab.conf
+++ b/conf/machine/rpi4-omnect-lab.conf
@@ -20,6 +20,6 @@ WKS_FILE = "omnect-os.rpi4.wks.in"
 UBOOT_ARCH = "arm64"
 
 # no differentiation between release an devel images concerning rootfs size
-OMNECT_PART_SIZE_ROOTFS    ?= "${@bb.utils.contains('OMNECT_RELEASE_IMAGE', '1', 900000', '900000', d)}"
+OMNECT_PART_SIZE_ROOTFS    ?= "${@bb.utils.contains('OMNECT_RELEASE_IMAGE', '1', '900000', '900000', d)}"
 
 OMNECT_ONLINE_INTERFACES = "eth0:${OMNECT_WLAN0}"
