omnect-os-distro.conf/machine configs: introduce possibility to define different rootfs maximum sizes for release and development images
Signed-off-by: Harry Waschkeit <harry.waschkeit@googlemail.com>

--- a/conf/machine/phyboard-polis-imx8mm-4.extra.conf
+++ b/conf/machine/phyboard-polis-imx8mm-4.extra.conf
@@ -37,3 +37,7 @@ OMNECT_ETH0 = "eth0"
 
 # wlan device name
 OMNECT_WLAN0 = "wlan0"
+
+# no differentiation for now between release an devel images concerning rootfs
+# size
+OMNECT_PART_SIZE_ROOTFS ?= "${@bb.utils.contains('OMNECT_RELEASE_IMAGE', '1', '760832', '760832', d)}"
