--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -35,13 +35,15 @@ IMAGE_INSTALL:remove = "kernel"
 #     Note, the last data partition will be expanded during the first boot after image flashing inside the INITRAMFS.
 #     This means, OMNECT_PART_SIZE_DATA is the initial value.
 #     Note, when using kas/feature/omnect-os-common.yaml the values configured there will override values here.
-OMNECT_PART_SIZE_BOOT ?= "40960"
-OMNECT_PART_SIZE_UBOOT_ENV ?= "64"
-OMNECT_PART_SIZE_ROOTFS ?= "760832"
-OMNECT_PART_SIZE_FACTORY ?= "40960"
-OMNECT_PART_SIZE_CERT ?= "40960"
-OMNECT_PART_SIZE_ETC ?= "40960"
-OMNECT_PART_SIZE_DATA ?= "524288"
+OMNECT_PART_SIZE_BOOT      ??= "40960"
+OMNECT_PART_SIZE_UBOOT_ENV ??= "64"
+# given that each machine now defines its own value for OMNECT_PART_SIZE_ROOTFS
+# now, a fixed value for a fallback doesn't make sense anymore
+# OMNECT_PART_SIZE_ROOTFS    ??= "760832"
+OMNECT_PART_SIZE_FACTORY   ??= "40960"
+OMNECT_PART_SIZE_CERT      ??= "40960"
+OMNECT_PART_SIZE_ETC       ??= "40960"
+OMNECT_PART_SIZE_DATA      ??= "524288"
 
 # setup OOM behaviour
 OMNECT_VM_PANIC_ON_OOM ?= "0"
