--- a/conf/machine/phygate-tauri-l-imx8mm-2.extra.conf
+++ b/conf/machine/phygate-tauri-l-imx8mm-2.extra.conf
@@ -48,3 +48,7 @@ OMNECT_ETH1 = "eth1"
 # this is not set in meta-phytec, copied it from meta-phytec polis config
 ATF_PLATFORM = "imx8mm"
 ATF_LOAD_ADDR = "0x920000"
+
+# no differentiation for now between release an devel images concerning rootfs
+# size
+OMNECT_PART_SIZE_ROOTFS ?= "${@bb.utils.contains('OMNECT_RELEASE_IMAGE', '1', '760832', '760832', d)}"
