--- a/conf/machine/raspberrypi4-64.extra.conf
+++ b/conf/machine/raspberrypi4-64.extra.conf
@@ -8,3 +8,7 @@ WKS_FILE = "omnect-os.rpi4.wks.in"
 
 # u-boot boot cmd config vars
 UBOOT_ARCH = "arm64"
+
+# no differentiation for now between release an devel images concerning rootfs
+# size
+OMNECT_PART_SIZE_ROOTFS ?= "${@bb.utils.contains('OMNECT_RELEASE_IMAGE', '1', '760832', '760832', d)}"
