kirkstone-next <- kirkstone 0.22.5
Signed-off-by: Harry Waschkeit <harry.waschkeit@googlemail.com>

--- a/conf/machine/eg500.extra.conf
+++ b/conf/machine/eg500.extra.conf
@@ -57,3 +57,10 @@ MACHINE_EXTRA_RRECOMMENDS:remove = "linux-firmware"
 
 # @todo remove me when solved where eee-acpi-scripts is located
 MACHINE_EXTRA_RRECOMMENDS:remove = "eee-acpi-scripts"
+
+# no differentiation for now between release an devel images concerning rootfs
+# size
+# FIXME: these values need to be adapted to actual rootfs allocation!
+# to keep that platform buildable the old general default value from
+# omnect-os-distro.conf is used here.
+OMNECT_PART_SIZE_ROOTFS ?= "${@bb.utils.contains('OMNECT_RELEASE_IMAGE', '1', '760832', '760832', d)}"
