--- a/conf/machine/rpi4-omnect-lab.conf
+++ b/conf/machine/rpi4-omnect-lab.conf
@@ -22,4 +22,7 @@ UBOOT_ARCH = "arm64"
 # no differentiation between release an devel images concerning rootfs size
 OMNECT_PART_SIZE_ROOTFS    ?= "${@bb.utils.contains('OMNECT_RELEASE_IMAGE', '1', '900000', '900000', d)}"
 
-OMNECT_ONLINE_INTERFACES = "eth0:${OMNECT_WLAN0}"
+# LTE modem is expected on lower USB3 port, and supported LTE modems are ...
+# - Sierra Wireless Airprime EM7455 (wwan interface wwp1s0u1u2i8), or
+# - Quectel EC25-EUX (wwan interface wwp1s0u1u2i8)
+OMNECT_ONLINE_INTERFACES = "eth0:${OMNECT_WLAN0}:wwp1s0u1u2i8:wwp1s0u1u2i4"
