--- a/kas/distro/poky.yaml
+++ b/kas/distro/poky.yaml
@@ -18,3 +18,6 @@ repos:
       p001:
         repo: "meta-omnect"
         path: "kas/patches/poky_bootimg_efi_wic.patch"
+      p002:
+        repo: "meta-omnect"
+        path: "kas/patches/poky_image_bbclass_rootfs_size_messages.patch"
