--- a/kas/feature/flash-mode-3.yaml
+++ b/kas/feature/flash-mode-3.yaml
@@ -6,3 +6,5 @@ header:
 local_conf_header:
   meta-omnect_feature_flash-mode-3: |
     DISTRO_FEATURES:append = " flash-mode-3"
+
+    OMNECT_UBOOT_WRITEABLE_ENV_FLAGS:append = "flash-mode-url:sw,"
