--- a/conf/distro/include/omnect-os-release.conf
+++ b/conf/distro/include/omnect-os-release.conf
@@ -2,7 +2,7 @@
 FILESEXTRAPATHS:prepend:pn-iptables := "${LAYERDIR_omnect}/files/release:"
 
 # disable getty on serial console
-#SERIAL_CONSOLES = ""
+SERIAL_CONSOLES = ""
 
 # https://docs.yoctoproject.org/4.0.6/singleindex.html#term-APPEND
 # the manual says it is a grub-efi specific var, but it is also used in the
