removed MACHINE_FEATURES ext2 vfat
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -126,3 +126,8 @@ OMNECT_DEVEL_TOOLS = "\
     ${@bb.utils.contains('DISTRO_FEATURES', 'tpm2', 'tpm2-tools', '', d)} \
     ${@bb.utils.contains('MACHINE_FEATURES', 'efi', 'efibootmgr', '', d)} \
 "
+
+# don't make sense to us as MACHINE_FEATURE since they are
+# DISTRO_FEATURE as well and packagegroup-base installs
+# different dependencies depend if the corresponding bsp set these.
+MACHINE_FEATURES:remove = "ext2 vfat"
