conf: add OMNECT_ONLINE_INTERFACES for eg500 in extra conf
Signed-off-by: Harry Waschkeit <harry.waschkeit@googlemail.com>

--- a/conf/machine/eg500.extra.conf
+++ b/conf/machine/eg500.extra.conf
@@ -58,3 +58,6 @@ MACHINE_EXTRA_RRECOMMENDS:remove = "eee-acpi-scripts"
 # no differentiation for now between release an devel images concerning rootfs
 # size
 OMNECT_PART_SIZE_ROOTFS ?= "${@bb.utils.contains('OMNECT_RELEASE_IMAGE', '1', '819200', '819200', d)}"
+
+# if an LTE modem is present it is a Quectel EC25
+OMNECT_ONLINE_INTERFACES = "enp1s0:enp2s0:enp3s0:wwp0s21f0u8i4"
