--- a/conf/distro/include/omnect-os-release.conf
+++ b/conf/distro/include/omnect-os-release.conf
@@ -12,3 +12,6 @@ SERIAL_CONSOLES = ""
 APPEND += "quiet loglevel=3"
 # systemd.getty_auto=false -> https://www.freedesktop.org/software/systemd/man/systemd-getty-generator.html
 APPEND += "systemd.getty_auto=false"
+
+# don't build ptest artefacts for release image
+DISTRO_FEATURES:remove = "ptest"
