--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -105,6 +105,11 @@ SRC_URI:append:pn-busybox = " \
 "
 SYSTEMD_SERVICE:remove:pn-busybox-syslog = "file://busybox-syslog.service"
 
+# we don't build ptest-pkgs so the DISTRO_FEATURE alone doesn't make sense for us
+# with the feature set we currently build packages like bc (ptest rdeps from util-linux)
+# for the target which not end up in rootfs.
+DISTRO_FEATURES:remove = "ptest"
+
 # define default devel tools to be included in image
 OMNECT_DEVEL_TOOLS = "\
     curl \
