eg500: add 3g to MACHINE_FEATURES
Signed-off-by: Harry Waschkeit <harry.waschkeit@googlemail.com>

--- a/conf/machine/eg500.extra.conf
+++ b/conf/machine/eg500.extra.conf
@@ -46,7 +46,7 @@ DISTRO_FEATURES:remove = " \
 # this machine uses grub
 MACHINEOVERRIDES:append = ":omnect_grub"
 
-MACHINE_FEATURES += "tpm2"
+MACHINE_FEATURES += "tpm2 3g"
 MACHINE_EXTRA_RRECOMMENDS += "linux-firmware-i915"
 
 # don't install every available firmware
