omnect-os-distro.conf: add devel tools acpica and dmidecode for efi platforms
Signed-off-by: Harry Waschkeit <harry.waschkeit@googlemail.com>

--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -124,7 +124,7 @@ OMNECT_DEVEL_TOOLS = "\
     tcpdump \
     valgrind \
     ${@bb.utils.contains('DISTRO_FEATURES', 'tpm2', 'tpm2-tools', '', d)} \
-    ${@bb.utils.contains('MACHINE_FEATURES', 'efi', 'efibootmgr', '', d)} \
+    ${@bb.utils.contains('MACHINE_FEATURES', 'efi', 'efibootmgr acpica dmidecode', '', d)} \
 "
 
 # don't make sense to us as MACHINE_FEATURE since they are
