NetworkManager.conf: explain autoconnect-retries-value 0
Signed-off-by: Harry Waschkeit <harry.waschkeit@googlemail.com>

--- a/recipes-connectivity/networkmanager/files/NetworkManager.conf
+++ b/recipes-connectivity/networkmanager/files/NetworkManager.conf
@@ -1,8 +1,16 @@
 [main]
 dns=systemd-resolved
 plugins=keyfile
-autoconnect-retries-default=0
 hostname-mode=none
+
+# We want to have endless retries which can be done with special value 0.
+# But mind, for whatever reason this isn't described in the official
+# documentation one can find via networkmanager.dev!
+# Instead it can be found on ...
+#   https://developer-old.gnome.org/NetworkManager/stable/settings-connection.html autoconnect-retries-default
+# ... under description of connection profile setting autoconnect-retries which
+# isn't contained at all in official documentation.
+autoconnect-retries-default=0
 
 [keyfile]
 unmanaged-devices=except:interface-name:wwan*,except:interface-name:cdc-wdm*
