add acpica & dmidecode for x86-64 only
Signed-off-by: Harry Waschkeit <harry.waschkeit@googlemail.com>

--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -125,8 +125,10 @@ OMNECT_DEVEL_TOOLS = "\
     tcpdump \
     valgrind \
     ${@bb.utils.contains('DISTRO_FEATURES', 'tpm2', 'tpm2-tools', '', d)} \
-    ${@bb.utils.contains('MACHINE_FEATURES', 'efi', 'efibootmgr acpica dmidecode', '', d)} \
+    ${@bb.utils.contains('MACHINE_FEATURES', 'efi', 'efibootmgr', '', d)} \
 "
+
+OMNECT_DEVEL_TOOLS:append:x86-64 = "acpica dmidecode"
 
 # don't make sense to us as MACHINE_FEATURE since they are
 # DISTRO_FEATURE as well and packagegroup-base installs
