--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -34,7 +34,7 @@ IMAGE_INSTALL:remove = "kernel"
 # define partition (default) sizes in KiB
 #     Note, the last data partition will be expanded during the first boot after image flashing inside the INITRAMFS.
 #     This means, OMNECT_PART_SIZE_DATA is the initial value.
-#     Note, when using kas/feature/omnect-os-common.yaml the values configured there will override values here.
+#     Note, machine configurations can override these values.
 OMNECT_PART_SIZE_BOOT      ??= "40960"
 OMNECT_PART_SIZE_UBOOT_ENV ??= "64"
 # given that each machine now defines its own value for OMNECT_PART_SIZE_ROOTFS
@@ -114,6 +114,7 @@ OMNECT_DEVEL_TOOLS = "\
     htop \
     iproute2-ip \
     ldd \
+    less \
     lshw \
     lsof \
     ltrace \
@@ -126,6 +127,8 @@ OMNECT_DEVEL_TOOLS = "\
     ${@bb.utils.contains('DISTRO_FEATURES', 'tpm2', 'tpm2-tools', '', d)} \
     ${@bb.utils.contains('MACHINE_FEATURES', 'efi', 'efibootmgr', '', d)} \
 "
+
+OMNECT_DEVEL_TOOLS:append:x86-64 = "acpica dmidecode"
 
 # don't make sense to us as MACHINE_FEATURE since they are
 # DISTRO_FEATURE as well and packagegroup-base installs
