--- a/conf/distro/include/omnect-os-kernel.conf
+++ b/conf/distro/include/omnect-os-kernel.conf
@@ -1,5 +1,11 @@
 # - we enable overlayfs for all kernels (dependency of our partition layout)
 # - we disable kvm (e.g. set by linux-imx)
+OMNECT_KERNEL_SRC_URI_LTE = " \
+    file://mbim.cfg \
+    file://qualcomm.cfg \
+    file://sierra.cfg \
+"
+
 OMNECT_KERNEL_SRC_URI = " \
     file://enable-overlayfs.cfg \
     file://enable-cifs.cfg \
@@ -8,6 +14,7 @@ OMNECT_KERNEL_SRC_URI = " \
     file://lxc.cfg \
     file://netfilter.cfg \
     file://wireguard.cfg \
+    ${@bb.utils.contains('MACHINE_FEATURES', '3g', '${OMNECT_KERNEL_SRC_URI_LTE}', '', d)} \
     ${@bb.utils.contains('MACHINE_FEATURES', 'can', 'file://vcan_vxcan.cfg', '', d)} \
 "
 
