--- a/conf/machine/eg500.extra.conf
+++ b/conf/machine/eg500.extra.conf
@@ -28,14 +28,10 @@ INITRAMFS_MAXSIZE = ""
 # we use libubootenv but not u-boot for this device
 DEPENDS:remove:pn-libubootenv = "u-boot-default-script"
 
-# ethernet device name
-OMNECT_ETH0 = "enp1s0"
-OMNECT_ETH1 = "enp2s0"
-OMNECT_ETH2 = "enp3s0"
+OMNECT_WAIT_ONLINE_INTERFACES_BUILD = "enp1s0:enp2s0:enp3s0"
 
 # remove distro features we don't support
 DISTRO_FEATURES:remove = " \
-    3g \
     alsa \
     bluetooth \
     nfc \
@@ -46,10 +42,11 @@ DISTRO_FEATURES:remove = " \
     wayland \
     wifi \
 "
+
 # this machine uses grub
 MACHINEOVERRIDES:append = ":omnect_grub"
 
-MACHINE_FEATURES += "tpm2"
+MACHINE_FEATURES += "tpm2 3g"
 MACHINE_EXTRA_RRECOMMENDS += "linux-firmware-i915"
 
 # don't install every available firmware
@@ -61,3 +58,6 @@ MACHINE_EXTRA_RRECOMMENDS:remove = "eee-acpi-scripts"
 # no differentiation for now between release an devel images concerning rootfs
 # size
 OMNECT_PART_SIZE_ROOTFS ?= "${@bb.utils.contains('OMNECT_RELEASE_IMAGE', '1', '819200', '819200', d)}"
+
+# if an LTE modem is present it is a Quectel EC25
+OMNECT_ONLINE_INTERFACES = "enp1s0:enp2s0:enp3s0:wwp0s21f0u8i4"
