--- a/conf/distro/include/omnect-os-fixes.conf
+++ b/conf/distro/include/omnect-os-fixes.conf
@@ -13,6 +13,19 @@ DEPENDS:append:pn-dbus = " autoconf-archive-native"
 # docker: we don't use btrfs and support is disabled in docker-moby per default anyway
 DEPENDS:remove:pn-docker-moby = "btrfs-tools"
 
+# e2fsprogs: correct build dependency, otherwise 'autoconf-archive' lands in sbom
+DEPENDS:remove:pn-e2fsprogs = "autoconf-archive"
+DEPENDS:append:pn-e2fsprogs = " autoconf-archive-native"
+
+# gobject-introspection: correct build dependency, otherwise 'autoconf-archive' lands in sbom
+# DEPENDS:remove:pn-gobject-introspection = "autoconf-archive"
+# DEPENDS:append:pn-gobject-introspection = " autoconf-archive-native"
+
+# icu: correct build dependency, otherwise 'autoconf-archive' lands in sbom
+DEPENDS:remove:pn-icu = "autoconf-archive"
+DEPENDS:append:pn-icu = " autoconf-archive-native"
+
+
 # lshw: fix lshw e.g. on tauri-l
 FILESEXTRAPATHS:prepend:pn-lshw := "${LAYERDIR_omnect}/files/patches:"
 SRC_URI:append:pn-lshw = " file://lshw_github_PR87.patch"
