more autoconf-archive fixes; remove gobject-introspection from DISTRO_FEATURES; fixed networkmanager build
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/distro/include/omnect-os-fixes.conf
+++ b/conf/distro/include/omnect-os-fixes.conf
@@ -18,14 +18,22 @@ DEPENDS:remove:pn-e2fsprogs = "autoconf-archive"
 DEPENDS:append:pn-e2fsprogs = " autoconf-archive-native"
 
 # gobject-introspection: correct build dependency, otherwise 'autoconf-archive' lands in sbom
-# DEPENDS:remove:pn-gobject-introspection = "autoconf-archive"
-# DEPENDS:append:pn-gobject-introspection = " autoconf-archive-native"
+DEPENDS:remove:pn-gobject-introspection = "autoconf-archive"
+DEPENDS:append:pn-gobject-introspection = " autoconf-archive-native"
 
 # icu: correct build dependency, otherwise 'autoconf-archive' lands in sbom
 DEPENDS:remove:pn-icu = "autoconf-archive"
 DEPENDS:append:pn-icu = " autoconf-archive-native"
 
+# libx11: correct build dependency, otherwise 'autoconf-archive' lands in sbom
+DEPENDS:remove:pn-libx11 = "autoconf-archive"
+DEPENDS:append:pn-libx11 = " autoconf-archive-native"
 
 # lshw: fix lshw e.g. on tauri-l
 FILESEXTRAPATHS:prepend:pn-lshw := "${LAYERDIR_omnect}/files/patches:"
 SRC_URI:append:pn-lshw = " file://lshw_github_PR87.patch"
+
+# networkmanager: we removed qemu-usermode from MACHINE_FEATURES, this results
+# in failure of networkmanager configuration step for gobject-introspection,
+# unless we build without vala support
+PACKAGECONFIG:remove:pn-networkmanager = "vala"
