--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -108,11 +108,6 @@ SRC_URI:append:pn-busybox = " \
 "
 SYSTEMD_SERVICE:remove:pn-busybox-syslog = "file://busybox-syslog.service"
 
-# We don't build ptest-pkgs. The DISTRO_FEATURE alone doesn't make sense for us.
-# With the feature set, we currently build packages like bc (ptest rdeps from util-linux)
-# for the target which not end up in rootfs.
-DISTRO_FEATURES:remove = "ptest"
-
 # define default devel tools to be included in image
 OMNECT_DEVEL_TOOLS = "\
     curl \
@@ -137,6 +132,13 @@ OMNECT_DEVEL_TOOLS = "\
 "
 
 OMNECT_DEVEL_TOOLS:append:x86-64 = "acpica dmidecode"
+
+# We don't build ptest-pkgs. The DISTRO_FEATURE alone doesn't make sense for us.
+# With the feature set, we currently build packages like bc (ptest rdeps from util-linux)
+# for the target which not end up in rootfs.
+DISTRO_FEATURES:remove = "ptest"
+# We don't use gobject-introspection
+DISTRO_FEATURES:remove = "gobject-introspection"
 
 # don't make sense to us as MACHINE_FEATURE since they are
 # DISTRO_FEATURE as well and packagegroup-base installs
