restrict jq deps
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -126,6 +126,9 @@ PACKAGECONFIG:pn-bluez5 ?= "systemd"
 # restrict docker-moby dependencies
 PACKAGECONFIG:pn-docker-moby ?= "seccomp"
 
+# restrict jq dependencies
+PACKAGECONFIG:pn-jq = ""
+
 # define default devel tools to be included in image
 OMNECT_DEVEL_TOOLS = "\
     curl \
