SBOM handling + reviewed and removed dependencies (#363)

--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -22,7 +22,7 @@ JOURNALD_SystemMaxUse ?= "128M"
 PACKAGE_CLASSES ?= "package_ipk"
 
 # Check if Buildsystem can reach remote sources
-CONNECTIVITY_CHECK_URIS ?= "https://github.com/omnect "
+CONNECTIVITY_CHECK_URIS ?= "https://github.com/omnect"
 
 # Image configuration
 IMAGE_FSTYPES = "ext4.gz wic.xz wic.bmap"
@@ -58,6 +58,9 @@ WICVARS:append = " OMNECT_PART_SIZE_ETC"
 WICVARS:append = " OMNECT_PART_SIZE_DATA"
 WICVARS:append = " OMNECT_PART_OFFSET_UBOOT_ENV1"
 WICVARS:append = " OMNECT_PART_OFFSET_UBOOT_ENV2"
+
+# on x86 poky sets these as default dependencies ... we don't use them
+WKS_FILE_DEPENDS_BOOTLOADERS:remove = "syslinux systemd-boot"
 
 # location of u-boot environment areas in KiB
 #   - Fixed addresses are used (--offset in WKS file), suitable for u-boot configuration.
@@ -130,7 +133,19 @@ OMNECT_DEVEL_TOOLS = "\
 
 OMNECT_DEVEL_TOOLS:append:x86-64 = "acpica dmidecode"
 
+# We don't build ptest-pkgs. The DISTRO_FEATURE alone doesn't make sense for us.
+# With the feature set, we currently build packages like bc (ptest rdeps from util-linux)
+# for the target which not end up in rootfs.
+DISTRO_FEATURES:remove = "ptest"
+# We don't use gobject-introspection
+DISTRO_FEATURES:remove = "gobject-introspection"
+
 # don't make sense to us as MACHINE_FEATURE since they are
 # DISTRO_FEATURE as well and packagegroup-base installs
-# different dependencies depend if the corresponding bsp set these.
+# different dependencies dependent if the corresponding bsp set these.
 MACHINE_FEATURES:remove = "ext2 vfat"
+# Remove serial globally. Currently all platforms support serial, but we see no value from
+# packagegroup-serial
+MACHINE_FEATURES:remove = "serial"
+# We don't use qemu-usermode, resp. it is currently not usable straightforward.
+MACHINE_FEATURES:remove = "qemu-usermode"
