--- a/conf/machine/eg500.extra.conf
+++ b/conf/machine/eg500.extra.conf
@@ -61,3 +61,8 @@ OMNECT_PART_SIZE_ROOTFS ?= "${@bb.utils.contains('OMNECT_RELEASE_IMAGE', '1', '8
 
 # if an LTE modem is present it is a Quectel EC25
 OMNECT_ONLINE_INTERFACES = "enp1s0:enp2s0:enp3s0:wwp0s21f0u8i4"
+
+# configure hardware watchdog
+# the maximum watchdog deadline depends on the hardware capabilities
+SYSTEMD_RuntimeWatchdogSec  = "60"
+SYSTEMD_RebootWatchdogSec   = "60"
