aziot-identity-precondition: handle if 00-super.toml is non-existent or empty
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/recipes-azure-iot/azure-identityd/aziot-identityd/aziot-identityd-precondition.service
+++ b/recipes-azure-iot/azure-identityd/aziot-identityd/aziot-identityd-precondition.service
@@ -14,6 +14,8 @@ ConditionPathExists=|/run/omnect-device-service/omnect_validate_update
 ConditionPathExists=|/run/omnect-device-service/omnect_validate_update_failed
 ConditionPathExists=|/run/omnect-device-service/omnect_bootloader_updated
 
+ConditionFileNotEmpty=|!/etc/aziot/identityd/config.d/00-super.toml
+
 [Service]
 Type=oneshot
 ExecStart=@@AZIOTCLI@@ config apply
