--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -121,7 +121,8 @@ SRC_URI:append:pn-busybox = " \
 SYSTEMD_SERVICE:remove:pn-busybox-syslog = "file://busybox-syslog.service"
 
 # restrict bluez5 dependencies
-PACKAGECONFIG:pn-bluez5 ?= "systemd"
+OMNECT_BLUEZ_TOOLS = "${@bb.utils.contains('OMNECT_RELEASE_IMAGE', '1', '', 'tools', d)}"
+PACKAGECONFIG:pn-bluez5 ?= "${OMNECT_BLUEZ_TOOLS} systemd deprecated udev"
 
 # restrict docker-moby dependencies
 PACKAGECONFIG:pn-docker-moby ?= "seccomp"
