fixed release startup of wifi-commissioning-service
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -121,8 +121,7 @@ SRC_URI:append:pn-busybox = " \
 SYSTEMD_SERVICE:remove:pn-busybox-syslog = "file://busybox-syslog.service"
 
 # restrict bluez5 dependencies
-OMNECT_BLUEZ_TOOLS = "${@bb.utils.contains('OMNECT_RELEASE_IMAGE', '1', '', 'tools', d)}"
-PACKAGECONFIG:pn-bluez5 ?= "${OMNECT_BLUEZ_TOOLS} systemd deprecated udev"
+PACKAGECONFIG:pn-bluez5 ?= "deprecated systemd tools udev"
 
 # restrict docker-moby dependencies
 PACKAGECONFIG:pn-docker-moby ?= "seccomp"
