--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -2,7 +2,7 @@ TARGET_VENDOR = "-omnect"
 DISTRO = "omnect-os"
 DISTRO_NAME = "${DISTRO_NAME_PREFIX}OMNECT${DISTRO_NAME_SUFFIX}"
 DISTRO_VERSION = "${OE_VERSION}.${OMNECT_BUILD_NUMBER}"
-DISTRO_FEATURES += "debuginfod ipv4 ipv6 polkit seccomp zeroconf"
+DISTRO_FEATURES = "debuginfod ipv4 ipv6 polkit seccomp zeroconf"
 DISTRO_FEATURES_BACKFILL_CONSIDERED += "pulseaudio gobject-introspection-data ldconfig"
 
 #DISTRO_FEATURES depending on MACHINE_FEATURES:
