openembedded-core based distro config (#370)

--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -1,11 +1,23 @@
+TARGET_VENDOR = "-omnect"
 DISTRO = "omnect-os"
 DISTRO_NAME = "${DISTRO_NAME_PREFIX}OMNECT${DISTRO_NAME_SUFFIX}"
-DISTROOVERRIDES = "poky:omnect-os"
-# DISTRO_VERSION is POKY_VERSION (since we include poky conf before our own
-# distro settings) appended with a build number.
-DISTRO_VERSION:append = ".${OMNECT_BUILD_NUMBER}"
-DISTRO_FEATURES += "polkit"
-TARGET_VENDOR = "-omnect"
+DISTRO_VERSION = "${OE_VERSION}.${OMNECT_BUILD_NUMBER}"
+DISTRO_FEATURES = "debuginfod ipv4 ipv6 polkit seccomp zeroconf"
+DISTRO_FEATURES_BACKFILL_CONSIDERED += "pulseaudio gobject-introspection-data ldconfig"
+
+#DISTRO_FEATURES depending on MACHINE_FEATURES:
+DISTRO_FEATURES += "${@bb.utils.contains('MACHINE_FEATURES', '3g', '3g', '', d)}"
+DISTRO_FEATURES += "${@bb.utils.contains('MACHINE_FEATURES', 'bluetooth', 'bluetooth', '', d)}"
+DISTRO_FEATURES += "${@bb.utils.contains('MACHINE_FEATURES', 'wifi', 'wifi', '', d)}"
+
+#override packagroup-base settings
+RDEPENDS:packagegroup-base-3g:pn-packagegroup-base = ""
+
+# We don't use qemu-usermode, resp. it is currently not usable straightforward.
+MACHINE_FEATURES_BACKFILL_CONSIDERED += "qemu-usermode"
+# Remove machine features we don't see any value in.
+# -> packagegroup-base doesn't install unwanted packages
+MACHINE_FEATURES:remove = "alsa ext2 pci pcmcia serial usbhost usbgadget vfat"
 
 # Systemd
 INIT_MANAGER ?= "systemd"
@@ -108,6 +120,15 @@ SRC_URI:append:pn-busybox = " \
 "
 SYSTEMD_SERVICE:remove:pn-busybox-syslog = "file://busybox-syslog.service"
 
+# restrict bluez5 dependencies
+PACKAGECONFIG:pn-bluez5 ?= "deprecated systemd tools udev"
+
+# restrict docker-moby dependencies
+PACKAGECONFIG:pn-docker-moby ?= "seccomp"
+
+# restrict jq dependencies
+PACKAGECONFIG:pn-jq = ""
+
 # define default devel tools to be included in image
 OMNECT_DEVEL_TOOLS = "\
     curl \
@@ -132,20 +153,3 @@ OMNECT_DEVEL_TOOLS = "\
 "
 
 OMNECT_DEVEL_TOOLS:append:x86-64 = "acpica dmidecode"
-
-# We don't build ptest-pkgs. The DISTRO_FEATURE alone doesn't make sense for us.
-# With the feature set, we currently build packages like bc (ptest rdeps from util-linux)
-# for the target which not end up in rootfs.
-DISTRO_FEATURES:remove = "ptest"
-# We don't use gobject-introspection
-DISTRO_FEATURES:remove = "gobject-introspection"
-
-# don't make sense to us as MACHINE_FEATURE since they are
-# DISTRO_FEATURE as well and packagegroup-base installs
-# different dependencies dependent if the corresponding bsp set these.
-MACHINE_FEATURES:remove = "ext2 vfat"
-# Remove serial globally. Currently all platforms support serial, but we see no value from
-# packagegroup-serial
-MACHINE_FEATURES:remove = "serial"
-# We don't use qemu-usermode, resp. it is currently not usable straightforward.
-MACHINE_FEATURES:remove = "qemu-usermode"
