--- a/conf/machine/eg500.extra.conf
+++ b/conf/machine/eg500.extra.conf
@@ -59,3 +59,8 @@ MACHINE_EXTRA_RRECOMMENDS:remove = "eee-acpi-scripts"
 # no differentiation for now between release an devel images concerning rootfs
 # size
 OMNECT_PART_SIZE_ROOTFS ?= "${@bb.utils.contains('OMNECT_RELEASE_IMAGE', '1', '819200', '819200', d)}"
+
+# configure hardware watchdog
+# the maximum watchdog deadline depends on the hardware capabilities
+SYSTEMD_RuntimeWatchdogSec  = "60"
+SYSTEMD_RebootWatchdogSec   = "60"
