--- a/conf/distro/include/omnect-os-rust.conf
+++ b/conf/distro/include/omnect-os-rust.conf
@@ -5,8 +5,8 @@ EXTRA_OECMAKE:append:pn-rust-llvm-native = " -DLLVM_ENABLE_PROJECTS=clang"
 # warning: this is global setting
 RUST_PANIC_STRATEGY = "abort"
 
-# we need rust 1.65.x from meta-omnect
-RUSTVERSION = "1.65%"
+# we use rust from meta-omnect
+RUSTVERSION = "1.74%"
 
 # enforce cargo offline builds
 # - this setting is mainly for yocto branches < kirkstone
