--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -129,6 +129,10 @@ PACKAGECONFIG:pn-docker-moby ?= "seccomp"
 # restrict jq dependencies
 PACKAGECONFIG:pn-jq = ""
 
+# don't install openssl-misc (prevent perl runtime dependency)
+# we don't use c_rehash anyway
+PACKAGES:remove:pn-openssl = "openssl-misc"
+
 # define default devel tools to be included in image
 OMNECT_DEVEL_TOOLS = "\
     curl \
