distro conf: set `SDK_NAME_PREFIX` and `SDK_VERSION` to get meaningful `TOOLCHAIN_OUTPUTNAME`

--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -2,6 +2,9 @@ TARGET_VENDOR = "-omnect"
 DISTRO = "omnect-os"
 DISTRO_NAME = "${DISTRO_NAME_PREFIX}OMNECT${DISTRO_NAME_SUFFIX}"
 DISTRO_VERSION = "${OE_VERSION}.${OMNECT_BUILD_NUMBER}"
+SDK_NAME_PREFIX = "${DISTRO_NAME}"
+SDK_VERSION = "${MACHINE}-${DISTRO_VERSION}"
+
 DISTRO_FEATURES = "debuginfod ipv4 ipv6 polkit seccomp zeroconf"
 DISTRO_FEATURES_BACKFILL_CONSIDERED += "pulseaudio gobject-introspection-data ldconfig"
 
