--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -132,9 +132,11 @@ PACKAGECONFIG:pn-docker-moby ?= "seccomp"
 # restrict jq dependencies
 PACKAGECONFIG:pn-jq = ""
 
-# don't install openssl-misc (prevent perl runtime dependency)
-# we don't use c_rehash anyway
+# get rid of perl as runtime dependency in release image
+PACKAGES:remove:pn-nss = "nss-smime"
 PACKAGES:remove:pn-openssl = "openssl-misc"
+RDEPENDS:nspr-dev:remove:pn-nspr = "perl"
+RDEPENDS:nspr-dev:append:pn-nspr = " perl-native"
 
 # define default devel tools to be included in image
 OMNECT_DEVEL_TOOLS = "\
