--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -132,6 +132,12 @@ PACKAGECONFIG:pn-docker-moby ?= "seccomp"
 # restrict jq dependencies
 PACKAGECONFIG:pn-jq = ""
 
+# get rid of perl as runtime dependency in release image
+PACKAGES:remove:pn-nss = "nss-smime"
+PACKAGES:remove:pn-openssl = "openssl-misc"
+RDEPENDS:nspr-dev:remove:pn-nspr = "perl"
+RDEPENDS:nspr-dev:append:pn-nspr = " perl-native"
+
 # define default devel tools to be included in image
 OMNECT_DEVEL_TOOLS = "\
     curl \
