--- a/conf/distro/include/omnect-os-kernel.conf
+++ b/conf/distro/include/omnect-os-kernel.conf
@@ -22,7 +22,7 @@ OMNECT_KERNEL_SRC_URI = " \
 BBMASK:append = " meta-virtualization/recipes-kernel/linux/linux-%.bbappend"
 FILESEXTRAPATHS:prepend:pn-linux-imx := "${LAYERDIR_omnect}/recipes-kernel/linux/files:"
 FILESEXTRAPATHS:prepend:pn-linux-raspberrypi := "${LAYERDIR_omnect}/recipes-kernel/linux/files:${LAYERDIR_virtualization-layer}/recipes-kernel/linux/linux-yocto:"
-FILESEXTRAPATHS:prepend:pn-linux-welotec := "${LAYERDIR_omnect}/recipes-kernel/linux/files:${LAYERDIR_virtualization-layer}/recipes-kernel/linux/linux-yocto:"
+FILESEXTRAPATHS:prepend:pn-linux-yocto := "${LAYERDIR_omnect}/recipes-kernel/linux/files:${LAYERDIR_virtualization-layer}/recipes-kernel/linux/linux-yocto:"
 SRC_URI:append:pn-linux-imx = " ${OMNECT_KERNEL_SRC_URI}"
 SRC_URI:append:pn-linux-raspberrypi = " ${OMNECT_KERNEL_SRC_URI}"
-SRC_URI:append:pn-linux-welotec = " ${OMNECT_KERNEL_SRC_URI}"
+SRC_URI:append:pn-linux-yocto = " ${OMNECT_KERNEL_SRC_URI}"
