--- a/conf/machine/arrakis-pico.conf
+++ b/conf/machine/arrakis-pico.conf
@@ -56,6 +56,9 @@ MACHINE_FEATURES = " \
     x86 \
 "
 MACHINEOVERRIDES = "omnect_grub:genericx86-64"
+MACHINE_EXTRA_RRECOMMENDS += "linux-firmware-i915"
+# don't install every available firmware
+MACHINE_EXTRA_RRECOMMENDS:remove = "linux-firmware"
 
 # if an LTE modem is present it is a Quectel EC25
 OMNECT_WAIT_ONLINE_INTERFACES_BUILD =  "enp1s0:enp2s0:enp3s0:wwp0s21f0u8i4"
