--- a/kas/distro/omnect-os.yaml
+++ b/kas/distro/omnect-os.yaml
@@ -75,11 +75,11 @@ env:
   TMPDIR: "${TOPDIR}/tmp"
 
   # iot-hub-device-update
-  ADU_DEVICEPROPERTIES_MANUFACTURER: "ADU_DEVICEPROPERTIES_MANUFACTURER_NOT_SET"
-  ADU_DEVICEPROPERTIES_MODEL: "ADU_DEVICEPROPERTIES_MODEL_NOT_SET"
-  ADU_MANUFACTURER: "ADU_MANUFACTURER_NOT_SET"
-  ADU_MODEL: "ADU_MODEL_NOT_SET"
-  ADU_GROUP: "ADU_GROUP_NOT_SET"
+  OMNECT_ADU_DEVICEPROPERTIES_MANUFACTURER: "OMNECT_ADU_DEVICEPROPERTIES_MANUFACTURER_NOT_SET"
+  OMNECT_ADU_DEVICEPROPERTIES_MODEL: "OMNECT_ADU_DEVICEPROPERTIES_MODEL_NOT_SET"
+  OMNECT_ADU_MANUFACTURER: "OMNECT_ADU_MANUFACTURER_NOT_SET"
+  OMNECT_ADU_MODEL: "OMNECT_ADU_MODEL_NOT_SET"
+  OMNECT_ADU_GROUP: "OMNECT_ADU_GROUP_NOT_SET"
 
   # sw-update
   HW_REV: "1.0"
