--- a/kas/machine/rpi/rpi.yaml
+++ b/kas/machine/rpi/rpi.yaml
@@ -7,4 +7,8 @@ repos:
   ext/meta-raspberrypi:
     url: "https://github.com/agherzan/meta-raspberrypi.git"
     branch: "kirkstone"
-    commit: "e6d2ff0b0cbb925157c95b07327c2a7dc145fabe"
+    commit: "9dc6673d41044f1174551120ce63501421dbcd85"
+    patches:
+      p001:
+        repo: "meta-omnect"
+        path: "kas/patches/meta-raspberrypi_layerdir.patch"
