--- a/conf/machine/raspberrypi4-64.extra.conf
+++ b/conf/machine/raspberrypi4-64.extra.conf
@@ -1,5 +1,10 @@
 require conf/machine/include/rpi.inc
 
+# workaround for building rpi-eepro,
+RPROVIDES:vim:pn-vim += "xxd"
+
+MACHINE_EXTRA_RRECOMMENDS +="rpi-eeprom xxd"
+
 # adu compatibility id
 OMNECT_ADU_DEVICEPROPERTIES_COMPATIBILITY_ID = "2"
 
