--- a/recipes-azure-iot/iot-hub-device-update/iot-hub-device-update/deviceupdate-agent.service
+++ b/recipes-azure-iot/iot-hub-device-update/iot-hub-device-update/deviceupdate-agent.service
@@ -22,7 +22,9 @@ ExecStartPre=-/usr/bin/AducIotAgent -l 2 --extension-type updateContentHandler -
 ExecStartPre=-/usr/bin/AducIotAgent -l 2 --extension-type updateContentHandler --extension-id "microsoft/update-manifest:5"  --register-extension /usr/lib/adu/extensions/libmicrosoft_steps_1.so
 ExecStartPre=-/usr/bin/AducIotAgent -l 2 --extension-type updateContentHandler --extension-id "omnect/swupdate_consent:1"    --register-extension /usr/lib/adu/extensions/libomnect_swupdate_consent_1.so
 ExecStartPre=-/usr/bin/AducIotAgent -l 2 --extension-type contentDownloader                                                  --register-extension /usr/lib/adu/extensions/libdeliveryoptimization_content_downloader.so
+ExecStartPre=-bash -c '/usr/sbin/omnect_service_log.sh start deviceupdate-agent'
 ExecStart=/usr/bin/AducIotAgent -l 0 -e
+ExecStopPost=-/bin/sh -c "/usr/sbin/omnect_service_log.sh stop deviceupdate-agent \"$$SERVICE_RESULT\" \"$$EXIT_CODE\" \"$$EXIT_STATUS\""
 
 RuntimeDirectory=iot-hub-device-update
 RuntimeDirectoryMode=700
