--- a/recipes-omnect/grub-cfg/grub-cfg/grub.cfg.in
+++ b/recipes-omnect/grub-cfg/grub-cfg/grub.cfg.in
@@ -3,7 +3,7 @@ timeout=2
 load_env
 
 if [ "x${omnect_os_bootpart}" = "x" ]; then
-  set omnect_os_bootpart="omnect-os-rootA"
+  set omnect_os_bootpart=2
   save_env omnect_os_bootpart
 fi
 
@@ -27,16 +27,16 @@ else
   save_env omnect_validate_update_failed
 fi
 
-set default="${omnect_os_bootpart}"
+if [ "x${omnect_rootblk}" != "x" ]; then
+  set kernel_param_rootblk=rootblk=${omnect_rootblk}
+  export kernel_param_rootblk
+fi
 
-menuentry 'omnect-os-rootA'{
-    set root=(hd0,gpt2)
-    linux /boot/bzImage rootwait root=@@OMNECT_ROOT_DEVICE@@p2 @@APPEND@@
-    initrd /boot/initramfs.cpio.gz
-}
+set root=(hd0,gpt${omnect_os_bootpart})
+set default="omnect-os"
 
-menuentry 'omnect-os-rootB'{
-    set root=(hd0,gpt3)
-    linux /boot/bzImage rootwait root=@@OMNECT_ROOT_DEVICE@@p3 @@APPEND@@
+# to be able to use the timeout, we do need an menuentry. otherwise we could boot directly without one
+menuentry 'omnect-os' {
+    linux /boot/bzImage rootpart=${omnect_os_bootpart} ${kernel_param_rootblk} @@APPEND@@
     initrd /boot/initramfs.cpio.gz
 }
