arrakis-pico: enable wifi
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/machine/arrakis-pico.conf
+++ b/conf/machine/arrakis-pico.conf
@@ -52,6 +52,7 @@ MACHINE_FEATURES = " \
     serial \
     tpm2 \
     usbhost \
+    wifi \
     x86 \
 "
 MACHINEOVERRIDES = "omnect_grub:genericx86-64"
