--- a/kas/distro/oe.yaml
+++ b/kas/distro/oe.yaml
@@ -5,16 +5,16 @@ distro: nodistro
 repos:
   ext/bitbake:
     url: "https://git.openembedded.org/bitbake"
-    branch: "2.0"
-    # tag yocto-4.0.17
-    commit: "40fd5f4eef7460ca67f32cfce8e229e67e1ff607"
+    branch: "2.8"
+    # tag yocto-5.0.0
+    commit: "c86466d51e8ff14e57a734c1eec5bb651fdc73ef"
     layers:
       .: 0
   ext/_openembedded-core: #_ prefixed because of layer order with same prio e.g. meta-openembedded
     url: "https://git.openembedded.org/openembedded-core"
-    branch: "kirkstone"
-    # tag yocto-4.0.17
-    commit: "2501534c9581c6c3439f525d630be11554a57d24"
+    branch: "scarthgap"
+    # tag yocto-5.0.0
+    commit: "b65b4e5a8e4473d8ca43835ba17bc8bd4bdca277"
     layers:
       meta:
     patches:
@@ -22,4 +22,4 @@ repos:
         repo: "meta-omnect"
         path: "kas/patches/oe.patch"
 env:
-  OE_VERSION: "4.0.17"
+  OE_VERSION: "5.0.0"
