--- a/kas/distro/omnect-os.yaml
+++ b/kas/distro/omnect-os.yaml
@@ -9,8 +9,8 @@ repos:
   meta-omnect:
   ext/meta-openembedded:
     url: "https://github.com/openembedded/meta-openembedded.git"
-    branch: "kirkstone"
-    commit: "8bb16533532b6abc2eded7d9961ab2a108fd7a5b"
+    branch: "scarthgap"
+    commit: "a72010b414ee3d73888ac9cb4e310e8f05e13aea"
     layers:
       meta-filesystems:
       meta-networking:
@@ -24,18 +24,18 @@ repos:
   # to build iot-identity-service
   ext/meta-security:
     url: "https://git.yoctoproject.org/meta-security"
-    branch: "kirkstone"
-    commit: "1a3e42cedbd94ca73be45800d0e902fec35d0f0f"
+    branch: "scarthgap"
+    commit: "11ea91192d43d7c2b0b95a93aa63ca7e73e38034"
     layers:
       meta-tpm:
   ext/meta-swupdate:
     url: "https://github.com/sbabic/meta-swupdate.git"
-    branch: "kirkstone"
-    commit: "3d12b2788a45d86efcb1ad3e01f209558c54795c"
+    branch: "scarthgap"
+    commit: "ae2f52ce3c8ee742218715d1d542eaae3b4ca19c"
   ext/meta-virtualization:
     url: "https://git.yoctoproject.org/meta-virtualization"
-    branch: "kirkstone"
-    commit: "cb2bc17e96552cdfc141d27bd9f4dbd95a872846"
+    branch: "scarthgap"
+    commit: "b339d02b4e8e8fea01d6d00088abb439b118d04c"
     patches:
       p001:
         repo: "meta-omnect"
