arrakis-pico -> genericx86_64
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/machine/genericx86-64.extra.conf
+++ b/conf/machine/genericx86-64.extra.conf
@@ -1,5 +1,3 @@
-require conf/machine/genericx86-64.conf
-
 # additional kernel config
 OMNECT_KERNEL_SRC_URI:append = " \
     file://crc32c-intel_module.cfg \
@@ -55,7 +53,7 @@ MACHINE_FEATURES = " \
     wifi \
     x86 \
 "
-MACHINEOVERRIDES = "omnect_grub:genericx86-64"
+MACHINEOVERRIDES:prepend = "omnect_grub:"
 MACHINE_EXTRA_RRECOMMENDS += "linux-firmware-i915"
 # don't install every available firmware
 MACHINE_EXTRA_RRECOMMENDS:remove = "linux-firmware"
