--- a/conf/distro/include/omnect-os-kernel.conf
+++ b/conf/distro/include/omnect-os-kernel.conf
@@ -11,13 +11,14 @@ OMNECT_KERNEL_SRC_URI = " \
     file://enable-overlayfs.cfg \
     file://enable-cifs.cfg \
     file://disable-kvm.cfg \
-    file://docker.cfg \
-    file://lxc.cfg \
     file://netfilter.cfg \
     file://wireguard.cfg \
     ${@bb.utils.contains('MACHINE_FEATURES', '3g', '${OMNECT_KERNEL_SRC_URI_LTE}', '', d)} \
     ${@bb.utils.contains('MACHINE_FEATURES', 'can', 'file://vcan_vxcan.cfg', '', d)} \
 "
+# TODO scarthgap
+#    file://docker.cfg
+#   file://lxc.cfg
 
 # enforce identical kernel config independent of meta-virtualization
 BBMASK:append = " meta-virtualization/recipes-kernel/linux/linux-%.bbappend"
