--- a/conf/machine/phyboard-polis-imx8mm-4.extra.conf
+++ b/conf/machine/phyboard-polis-imx8mm-4.extra.conf
@@ -40,3 +40,7 @@ OMNECT_WAIT_ONLINE_INTERFACES_BUILD = "eth0:${OMNECT_WLAN0}"
 # no differentiation for now between release an devel images concerning rootfs
 # size
 OMNECT_PART_SIZE_ROOTFS ?= "${@bb.utils.contains('OMNECT_RELEASE_IMAGE', '1', '760832', '760832', d)}"
+
+# meta-phytec compability fixes for scarthgap: TODO monitor when to get rid of them
+COMPATIBLE_MACHINE:pn-linux-phytec = "phyboard-polis-imx8mm-4"
+COMPATIBLE_MACHINE:pn-u-boot-phytec = "phyboard-polis-imx8mm-4"
