--- a/conf/machine/phygate-tauri-l-imx8mm-2.extra.conf
+++ b/conf/machine/phygate-tauri-l-imx8mm-2.extra.conf
@@ -36,3 +36,8 @@ ATF_LOAD_ADDR = "0x920000"
 # no differentiation for now between release an devel images concerning rootfs
 # size
 OMNECT_PART_SIZE_ROOTFS ?= "${@bb.utils.contains('OMNECT_RELEASE_IMAGE', '1', '760832', '760832', d)}"
+
+
+# meta-phytec compability fixes for scarthgap: TODO monitor when to get rid of them
+COMPATIBLE_MACHINE:pn-linux-phytec = "phygate-tauri-l-imx8mm-2"
+COMPATIBLE_MACHINE:pn-u-boot-phytec = "phygate-tauri-l-imx8mm-2"
