--- a/conf/machine/genericx86-64.extra.conf
+++ b/conf/machine/genericx86-64.extra.conf
@@ -58,8 +58,8 @@ MACHINE_EXTRA_RRECOMMENDS += "linux-firmware-i915"
 # don't install every available firmware
 MACHINE_EXTRA_RRECOMMENDS:remove = "linux-firmware"
 
-# if an LTE modem is present it is a Quectel EC25
-OMNECT_WAIT_ONLINE_INTERFACES_BUILD =  "enp1s0:enp2s0:enp3s0:wwp0s21f0u8i4"
+# has to be overwriten by injecting /etc/omnect/systemd-networkd-wait-online.env for specific configuration
+OMNECT_WAIT_ONLINE_INTERFACES_BUILD =  ""
 
 # configure hardware watchdog
 # the maximum watchdog deadline depends on the hardware capabilities
