refactor: separate bootloader version definitions
Signed-off-by: Harry Waschkeit <44188360+HarryWaschkeit@users.noreply.github.com>

--- a/conf/machine/phygate-tauri-l-imx8mm-2.extra.conf
+++ b/conf/machine/phygate-tauri-l-imx8mm-2.extra.conf
@@ -1,4 +1,5 @@
 require conf/machine/include/phytec-imx8mm.inc
+require conf/machine/include/phytec-imx8mm_bootloader_embedded_version.inc
 
 # adu compatibility id
 OMNECT_ADU_DEVICEPROPERTIES_COMPATIBILITY_ID = "2"
@@ -36,11 +37,3 @@ ATF_LOAD_ADDR = "0x920000"
 # no differentiation for now between release an devel images concerning rootfs
 # size
 OMNECT_PART_SIZE_ROOTFS ?= "${@bb.utils.contains('OMNECT_RELEASE_IMAGE', '1', '760832', '760832', d)}"
-
-# definitions to embed bootloader version in binary
-OMNECT_BOOTLOADER_EMBEDDED_VERSION_BBTARGET    = "imx-boot-phytec"
-OMNECT_BOOTLOADER_EMBEDDED_VERSION_BBFILE      = "${IMAGE_BOOTLOADER}"
-OMNECT_BOOTLOADER_EMBEDDED_VERSION_TYPE        = "flash"
-OMNECT_BOOTLOADER_EMBEDDED_VERSION_PARAMSIZE   ?= "256"
-OMNECT_BOOTLOADER_EMBEDDED_VERSION_IMAGEOFFSET = "${@${BOOTLOADER_SEEK} * 1024}"
-OMNECT_BOOTLOADER_EMBEDDED_VERSION_IMAGESIZE   = "${@${OMNECT_PART_OFFSET_UBOOT_ENV1} * 1024 - ${OMNECT_BOOTLOADER_EMBEDDED_VERSION_IMAGEOFFSET}}"
