genericx86-64: activte bluetooth
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/machine/genericx86-64.extra.conf
+++ b/conf/machine/genericx86-64.extra.conf
@@ -41,6 +41,7 @@ OMNECT_ADU_DEVICEPROPERTIES_COMPATIBILITY_ID = "0"
 MACHINE_FEATURES = " \
     3g \
     acpi \
+    bluetooth \
     efi \
     grub \
     keyboard \
