--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -124,8 +124,7 @@ SRC_URI:append:pn-busybox = " \
 SYSTEMD_SERVICE:remove:pn-busybox-syslog = "file://busybox-syslog.service"
 
 # restrict bluez5 dependencies
-PACKAGECONFIG:pn-bluez5 ?= "systemd udev"
-PACKAGECONFIG:pn-bluez5 += "${@bb.utils.contains('OMNECT_RELEASE_IMAGE', '1', '', 'deprecated readline tools', d)}"
+PACKAGECONFIG:pn-bluez5 ?= "${@bb.utils.contains('OMNECT_RELEASE_IMAGE', '1', 'systemd udev', 'systemd udev deprecated readline tools', d)}"
 
 # restrict docker-moby dependencies
 PACKAGECONFIG:pn-docker-moby ?= "seccomp"
